# esalenet

./: .env  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  apps.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
esalenet/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
esalenet/migrations/: 0001_initial.py  0002_alter_factory_name_alter_factory_product_and_more.py  0003_alter_contact_email.py  0004_alter_contact_email.py  0005_alter_contact_email_alter_contact_street.py
esales/: asgi.py  settings.py  urls.py  wsgi.py
